--- a/resources/tools/.swiftlint.yml
+++ b/resources/tools/.swiftlint.yml
@@ -1,20 +1,33 @@
+#
+# -------- Swiftlint --------
+#
+# Rule types: Lint, Idiomatic, Style, Metrics, Performance
+
+#
+# -------- Configuration --------
 
 # disabled_rules:
 
 opt_in_rules:
+ - anonymous_argument_in_multiline_closure
  - anyobject_protocol
  - array_init
  - attributes
+ - balanced_xctest_lifecycle
+ - capture_variable
  - closure_body_length
  - closure_end_indentation
  - closure_spacing
  - collection_alignment
- # - conditional_returns_on_newline
+ - conditional_returns_on_newline
  - contains_over_filter_count
  - contains_over_filter_is_empty
  - contains_over_first_not_nil
  - contains_over_range_nil_comparison
  - convenience_type
+ - discarded_notification_center_observer
+ - discouraged_assert
+ - discouraged_none_name
  - discouraged_object_literal
  - discouraged_optional_boolean
 # - discouraged_optional_collection
@@ -25,29 +38,31 @@ opt_in_rules:
  - enum_case_associated_values_count
  - expiring_todo
 # - explicit_acl
-# - explicit_enum_raw_value
+ - explicit_enum_raw_value
  - explicit_init
  - explicit_self
 # - explicit_top_level_acl
-# - explicit_type_interface
- - extension_access_modifier
+ - explicit_type_interface
+# - extension_access_modifier
  - fallthrough
  - fatal_error_message
 # - file_header
- - file_name
+# - file_name
  - file_name_no_space
-# - file_types_order (should try to connect after fix SwiftUI Preview false positive)
+# - file_types_order   # (should try to connect after fix SwiftUI Preview false positive)
  - first_where
  - flatmap_over_map_reduce
  - force_unwrapping
  - function_default_parameter_at_end
+ - ibinspectable_in_extension
  - identical_operands
-# - implicit_return
+ - implicit_return
  - implicitly_unwrapped_optional
-# - indentation_width
+ - indentation_width
  - joined_default_parameter
  - last_where
  - legacy_multiple
+ - legacy_objc_type
  - legacy_random
  - let_var_whitespace
  - literal_expression_end_indentation
@@ -55,29 +70,31 @@ opt_in_rules:
  - missing_docs
  - modifier_order
  - multiline_arguments
- # - multiline_arguments_brackets
+ - multiline_arguments_brackets
  - multiline_function_chains
  - multiline_literal_brackets
  - multiline_parameters
  - multiline_parameters_brackets
  - nimble_operator
  - no_extension_access_modifier
- # - no_grouping_extension
+# - no_grouping_extension
  - nslocalizedstring_key
  - nslocalizedstring_require_bundle
- # - number_separator
+ - number_separator
  - object_literal
  - operator_usage_whitespace
  - optional_enum_case_matching
  - overridden_super_call
  - override_in_extension
  - pattern_matching_keywords
+ - prefer_self_in_static_references
  - prefer_self_type_over_type_of_self
  - prefer_zero_over_explicit_init
-#  - prefixed_toplevel_constant
+ # - prefixed_toplevel_constant
  - private_action
  - private_outlet
- # - prohibited_interface_builder
+ - private_subject
+ - prohibited_interface_builder
  - prohibited_super_call
  - quick_discouraged_call
  - quick_discouraged_focused_test
@@ -90,13 +107,14 @@ opt_in_rules:
  - required_enum_case
  - single_test_class
  - sorted_first_last
- # - sorted_imports
- # - static_operator
+ - sorted_imports
+ - static_operator
  - strict_fileprivate
  - strong_iboutlet
  # - switch_case_on_newline
+ - test_case_accessibility
  - toggle_bool
- # - trailing_closure
+ - trailing_closure
  - type_contents_order
  - unavailable_function
  - unneeded_parentheses_in_closure_argument
@@ -134,6 +152,8 @@ identifier_name:
   excluded:
     - T
     - URL
+    - ID
+    - id
 
 type_name:
   excluded:
