--- a/resources/tools/.swiftlint.yml
+++ b/resources/tools/.swiftlint.yml
@@ -8,89 +8,25 @@
 
 # disabled_rules:
 
+
 opt_in_rules:
- - anonymous_argument_in_multiline_closure
+
+# lint
  - anyobject_protocol
  - array_init
- - attributes
  - balanced_xctest_lifecycle
  - capture_variable
- - closure_body_length
- - closure_end_indentation
- - closure_spacing
- - collection_alignment
- - conditional_returns_on_newline
- - contains_over_filter_count
- - contains_over_filter_is_empty
- - contains_over_first_not_nil
- - contains_over_range_nil_comparison
- - convenience_type
  - discarded_notification_center_observer
- - discouraged_assert
- - discouraged_none_name
- - discouraged_object_literal
- - discouraged_optional_boolean
-# - discouraged_optional_collection
- - empty_collection_literal
- - empty_count
- - empty_string
  - empty_xctest_method
- - enum_case_associated_values_count
  - expiring_todo
-# - explicit_acl
- - explicit_enum_raw_value
- - explicit_init
- - explicit_self
-# - explicit_top_level_acl
- - explicit_type_interface
-# - extension_access_modifier
- - fallthrough
- - fatal_error_message
-# - file_header
-# - file_name
- - file_name_no_space
-# - file_types_order   # (should try to connect after fix SwiftUI Preview false positive)
- - first_where
- - flatmap_over_map_reduce
- - force_unwrapping
- - function_default_parameter_at_end
  - ibinspectable_in_extension
  - identical_operands
- - implicit_return
- - implicitly_unwrapped_optional
- - indentation_width
- - joined_default_parameter
- - last_where
- - legacy_multiple
- - legacy_objc_type
- - legacy_random
- - let_var_whitespace
- - literal_expression_end_indentation
  - lower_acl_than_parent
  - missing_docs
- - modifier_order
- - multiline_arguments
- - multiline_arguments_brackets
- - multiline_function_chains
- - multiline_literal_brackets
- - multiline_parameters
- - multiline_parameters_brackets
- - nimble_operator
- - no_extension_access_modifier
-# - no_grouping_extension
  - nslocalizedstring_key
  - nslocalizedstring_require_bundle
- - number_separator
- - object_literal
- - operator_usage_whitespace
- - optional_enum_case_matching
  - overridden_super_call
  - override_in_extension
- - pattern_matching_keywords
- - prefer_self_in_static_references
- - prefer_self_type_over_type_of_self
- - prefer_zero_over_explicit_init
- # - prefixed_toplevel_constant
  - private_action
  - private_outlet
  - private_subject
@@ -100,34 +36,150 @@ opt_in_rules:
  - quick_discouraged_focused_test
  - quick_discouraged_pending_test
  - raw_value_for_camel_cased_codable_enum
- - reduce_into
- - redundant_nil_coalescing
- - redundant_type_annotation
- # - required_deinit
+# - required_deinit
  - required_enum_case
- - single_test_class
- - sorted_first_last
- - sorted_imports
- - static_operator
- - strict_fileprivate
  - strong_iboutlet
- # - switch_case_on_newline
  - test_case_accessibility
- - toggle_bool
- - trailing_closure
- - type_contents_order
- - unavailable_function
- - unneeded_parentheses_in_closure_argument
  - unowned_variable_capture
- - untyped_error_in_catch
  - unused_declaration
  - unused_import
- - vertical_parameter_alignment_on_call
-#  - vertical_whitespace_between_cases
- - vertical_whitespace_closing_braces
- # - vertical_whitespace_opening_braces
- - xct_specific_matcher
  - yoda_condition
+
+
+# idiomatic
+ - anonymous_argument_in_multiline_closure
+ -  convenience_type
+ - discouraged_assert
+ - discouraged_none_name
+ - discouraged_object_literal
+ - discouraged_optional_boolean
+# - discouraged_optional_collection
+# - explicit_acl
+ - explicit_enum_raw_value
+ - explicit_init
+# - explicit_top_level_acl
+ - explicit_type_interface
+# - extension_access_modifier
+ - fallthrough
+ - fatal_error_message
+# - file_name
+ - file_name_no_space
+ - force_unwrapping
+ - function_default_parameter_at_end
+ - implicitly_unwrapped_optional
+ - joined_default_parameter
+ - legacy_multiple
+ - legacy_objc_type
+ - legacy_random
+ - nimble_operator
+ - no_extension_access_modifier
+# - no_grouping_extension
+ - object_literal
+ - pattern_matching_keywords
+ - prefer_zero_over_explicit_init
+ - redundant_nil_coalescing
+ - redundant_type_annotation
+ - static_operator
+ - strict_fileprivate
+ - toggle_bool
+ - unavailable_function
+ - untyped_error_in_catch
+ - xct_specific_matcher
+
+
+# metrics
+ - closure_body_length
+ - enum_case_associated_values_count
+
+
+# performance
+ - contains_over_filter_count
+ - contains_over_filter_is_empty
+ - contains_over_first_not_nil
+ - contains_over_range_nil_comparison
+ - empty_collection_literal
+ - empty_count
+ - empty_string
+ - first_where
+ - flatmap_over_map_reduce
+ - last_where
+ - reduce_into
+ - sorted_first_last
+
+
+# style - enabled by default
+# - closing_brace
+# - closure_parameter_position
+# - colon
+# - comma
+# - computed_accessors_order
+# - control_statement
+# - empty_enum_arguments
+# - empty_parameters
+# - empty_parentheses_with_trailing_closure
+# - identifier_name
+# - implicit_getter
+# - inclusive_language
+# - leading_whitespace
+# - multiple_closures_with_trailing_closure
+# - no_space_in_method_call
+# - opening_brace
+# - operator_whitespace
+# - protocol_property_accessors_order
+# - redundant_discardable_let
+# - return_arrow_whitespace
+# - shorthand_operator
+# - statement_position
+# - switch_case_alignment
+# - trailing_comma
+# - trailing_newline
+# - trailing_whitespace
+# - unused_optional_binding
+# - vertical_parameter_alignment
+# - vertical_whitespace
+# - void_return
+
+
+# style - ok but disable for now
+# - attributes
+# - closure_end_indentation
+# - closure_spacing
+# - collection_alignment
+# - conditional_returns_on_newline
+# - explicit_self
+# - implicit_return
+# - indentation_width
+# - let_var_whitespace
+# - literal_expression_end_indentation
+# - modifier_order
+# - multiline_arguments
+# - multiline_arguments_brackets
+# - multiline_function_chains
+# - multiline_literal_brackets
+# - multiline_parameters
+# - multiline_parameters_brackets
+# - number_separator
+# - operator_usage_whitespace
+# - optional_enum_case_matching
+# - prefer_self_in_static_references
+# - prefer_self_type_over_type_of_self
+# - single_test_class
+# - sorted_imports
+# - trailing_closure
+# - type_contents_order
+# - unneeded_parentheses_in_closure_argument
+# - vertical_parameter_alignment_on_call
+# - vertical_whitespace_closing_braces
+
+
+# style - already disabled
+# - file_header
+# - file_types_order   # (should try to connect after fix SwiftUI Preview false positive)
+# - prefixed_toplevel_constant
+# - switch_case_on_newline
+#  - vertical_whitespace_between_cases
+# - vertical_whitespace_opening_braces
+
 
 excluded:
   - docs
